# timestar

./: Cargo.toml  README.md  timestar.yml
src/: main.rs  timestar_notification.rs
src/configuration/: settings.rs
