[package]
name = "timestar"
version = "0.1.0"
authors = ["Daniel Córdova A. <danesc87@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "3.6.3"
dirs = "2.0.2"
config = "0.10.1"
serde = "1.0.106"
serde_derive = "1.0.106"
